[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Matias-Sanchez-Wilson <92598449+Matias-Sanchez-Wilson@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
